# Synth-gallery

./: .descriptions.xml  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  PHASE_5_PLAN.md  PyTypeCheckerInspection.xml  README.md  ROADMAP.md  SECURITY.md  Start.bat  V1_0_0_REVIEW_PLAN.md  check_db_state.py  docker-compose.yml  fix_phase_5b.sql  manage_users.py  package.json  phase5c_cleanup.py  pyproject.toml  requirements.txt  test_folder_migration.py  test_migration.py  test_permission_migration.py  test_photo_migration.py  test_safe_migration.py  test_session_migration.py  validate_data.py
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: album-entity-refactoring.md  architecture-improvement.yml  bug_report.yml
app/: config.py  database.py  database_legacy_backup.py  database_minimal.py  dependencies.py  logging_config.py  main.py  middleware.py  tags.py
app/application/: __init__.py
app/infrastructure/: __init__.py
app/routes/: admin.py  admin_tags.py  api.py  auth.py  envelope.py  folders.py  gallery.py  safe_files.py  safes.py  tags.py  user_settings.py  webauthn.py
app/services/: backup.py  encryption.py  envelope_encryption.py  media.py  metadata.py  thumbnail.py  webauthn.py
app/static/: style.css
app/templates/: admin_api_keys.html  admin_backups.html  admin_maintenance.html  admin_users.html  base.html  encryption_settings.html  gallery.html  login.html  photo.html  reset_password.html  settings.html  tags.html
scripts/: add_deprecation_warnings.py  add_warnings_to_all.py  check_proxies.py  fix_dimensions.py  manage_users.py  migrate_extensions.py  migrate_to_envelope.py  migrate_v2_to_v3.py
tests/: COVERAGE_REPORT.md  README.md  __init__.py  conftest.py  test_async_repositories.py  test_minimal_example.py  test_safe_files.py  test_services.py
tests/e2e/: test_gallery.py
tests/integration/: __init__.py  test_ai_tagging.py  test_ai_tagging_sse.py  test_albums.py  test_auth.py  test_folders.py  test_gallery.py  test_lightbox_url.py  test_safe_security.py  test_security_upload_spoofing.py  test_sort_preference.py  test_upload.py
tests/manual/: TEST_CHECKLIST.md
tests/unit/: __init__.py  test_encryption.py  test_safe_permission_service.py  (+2 more)
(+99 files in other folders)
